Added Number Format Exception with an appropriate error message and 400 HTTP response code